--- a/CodingChallengeExpedia/Resources/Base.lproj/Main.storyboard
+++ b/CodingChallengeExpedia/Resources/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <textInputTraits key="textInputTraits"/>
                             <connections>
-                                <outlet property="delegate" destination="0Xb-q1-8Df" id="XOg-L5-lZ5"/>
+                                <outlet property="delegate" destination="36S-ta-oin" id="omX-63-dV9"/>
                             </connections>
                         </searchBar>
                         <prototypes>
@@ -64,7 +64,7 @@
                     <navigationItem key="navigationItem" title="Events" id="ZkG-Ip-VD5"/>
                     <connections>
                         <outlet property="searchEvents" destination="dUN-tB-6dB" id="iIu-et-hix"/>
-                        <segue destination="yNc-gJ-xfT" kind="show" identifier="showCollectionView" id="BdL-7l-yu4"/>
+                        <segue destination="yNc-gJ-xfT" kind="show" identifier="showEventDetails" id="BdL-7l-yu4"/>
                     </connections>
                 </tableViewController>
             </objects>
