--- a/CodingChallengeExpedia/Resources/Base.lproj/Main.storyboard
+++ b/CodingChallengeExpedia/Resources/Base.lproj/Main.storyboard
@@ -142,25 +142,62 @@
             </objects>
             <point key="canvasLocation" x="32.799999999999997" y="1428.9355322338831"/>
         </scene>
-        <!--View Controller-->
+        <!--Event Detail Screen View Controller-->
         <scene sceneID="LCT-9R-SLK">
             <objects>
-                <viewController id="eEK-vc-No3" sceneMemberID="viewController">
+                <viewController id="eEK-vc-No3" customClass="EventDetailScreenViewController" customModule="CodingChallengeExpedia" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="GcD-Wf-tGm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ug1-1Q-Uhy">
+                                <rect key="frame" x="11" y="35" width="49" height="27"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="backButton.png" backgroundImage="backButton.png"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vWw-r4-uz2">
+                                <rect key="frame" x="63" y="35" width="261" height="104"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fqm-OG-33X">
+                                <rect key="frame" x="332" y="40" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="93I-Kl-8ig">
+                                <rect key="frame" x="16" y="165" width="343" height="297"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s2r-p3-EgD">
+                                <rect key="frame" x="16" y="490" width="343" height="51"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jwU-Zq-Dpd">
+                                <rect key="frame" x="16" y="549" width="343" height="51"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="mFh-lF-Per"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vv6-wy-yui" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="668" y="1429"/>
+            <point key="canvasLocation" x="960.79999999999995" y="1428.9355322338831"/>
         </scene>
         <!--Event Details-->
         <scene sceneID="CdH-yW-pTI">
             <objects>
-                <viewController title="Event Details" id="yNc-gJ-xfT" customClass="EventDetailsViewController" customModule="CodingChallengeExpedia" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Event Details" id="yNc-gJ-xfT" customClass="EventDetailsViewControllerbk" customModule="CodingChallengeExpedia" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Tfa-PM-dEA"/>
                         <viewControllerLayoutGuide type="bottom" id="XBo-9L-i3Q"/>
@@ -177,4 +214,7 @@
             <point key="canvasLocation" x="1506" y="703"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="backButton.png" width="49" height="34"/>
+    </resources>
 </document>
