--- a/CodingChallengeExpedia/ViewController/Cells/EventTableViewCell.xib
+++ b/CodingChallengeExpedia/ViewController/Cells/EventTableViewCell.xib
@@ -6,98 +6,97 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="kEventTableViewCell" rowHeight="157" id="KGk-i7-Jjw" customClass="EventTableViewCell" customModule="CodingChallengeExpedia" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="450" height="157"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="kEventTableViewCell" rowHeight="123" id="KGk-i7-Jjw" customClass="EventTableViewCell" customModule="CodingChallengeExpedia" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="450" height="123"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="450" height="156.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="450" height="122.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="esw-YV-g25">
-                        <rect key="frame" x="12" y="30" width="417" height="100"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jF3-yK-dRG">
-                                <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="OR0-XQ-MNA"/>
-                                    <constraint firstAttribute="height" constant="100" id="imd-TA-wJG"/>
-                                </constraints>
-                            </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Lj6-A4-UgF">
-                                <rect key="frame" x="100" y="-30" width="317" height="130"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hma-kN-VDM">
-                                        <rect key="frame" x="0.0" y="0.0" width="317" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="6b4-xU-aeJ"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LAb-ut-pWi">
-                                        <rect key="frame" x="0.0" y="50" width="317" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="317" id="evu-3m-jCN"/>
-                                            <constraint firstAttribute="height" constant="30" id="yOs-qS-TxD"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zLl-wr-xho">
-                                        <rect key="frame" x="0.0" y="100" width="317" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="ldb-S3-Kgf"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="LAb-ut-pWi" firstAttribute="top" secondItem="Hma-kN-VDM" secondAttribute="bottom" id="0Pb-FI-sxH"/>
-                                    <constraint firstItem="LAb-ut-pWi" firstAttribute="leading" secondItem="Lj6-A4-UgF" secondAttribute="leading" id="2an-pq-SX7"/>
-                                    <constraint firstAttribute="trailing" secondItem="LAb-ut-pWi" secondAttribute="trailing" id="8dP-hq-AGc"/>
-                                    <constraint firstItem="zLl-wr-xho" firstAttribute="top" secondItem="LAb-ut-pWi" secondAttribute="bottom" id="FUM-IO-QWh"/>
-                                    <constraint firstItem="zLl-wr-xho" firstAttribute="top" secondItem="LAb-ut-pWi" secondAttribute="bottom" id="Ocw-Ic-p7f"/>
-                                    <constraint firstItem="Hma-kN-VDM" firstAttribute="top" secondItem="Lj6-A4-UgF" secondAttribute="top" id="Oi8-bC-jVh"/>
-                                    <constraint firstItem="zLl-wr-xho" firstAttribute="leading" secondItem="Lj6-A4-UgF" secondAttribute="leading" id="PGR-As-Bx6"/>
-                                    <constraint firstItem="Hma-kN-VDM" firstAttribute="leading" secondItem="Lj6-A4-UgF" secondAttribute="leading" id="hhq-3P-mBa"/>
-                                    <constraint firstAttribute="trailing" secondItem="zLl-wr-xho" secondAttribute="trailing" id="mLh-yC-c4C"/>
-                                    <constraint firstAttribute="bottom" secondItem="zLl-wr-xho" secondAttribute="bottom" id="pRH-UJ-SNy"/>
-                                    <constraint firstAttribute="trailing" secondItem="Hma-kN-VDM" secondAttribute="trailing" id="uB3-am-FLI"/>
-                                    <constraint firstItem="LAb-ut-pWi" firstAttribute="top" secondItem="Hma-kN-VDM" secondAttribute="bottom" id="xkz-Cm-Dql"/>
-                                </constraints>
-                            </stackView>
-                        </subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zLl-wr-xho">
+                        <rect key="frame" x="124" y="91" width="309" height="20.5"/>
                         <constraints>
-                            <constraint firstItem="Lj6-A4-UgF" firstAttribute="leading" secondItem="jF3-yK-dRG" secondAttribute="trailing" id="Rur-AQ-94U"/>
-                            <constraint firstItem="jF3-yK-dRG" firstAttribute="leading" secondItem="esw-YV-g25" secondAttribute="leading" id="Tj3-W4-aef"/>
-                            <constraint firstAttribute="bottom" secondItem="jF3-yK-dRG" secondAttribute="bottom" id="a4u-3g-04w"/>
-                            <constraint firstItem="jF3-yK-dRG" firstAttribute="top" secondItem="esw-YV-g25" secondAttribute="top" id="jJI-CX-wyu"/>
+                            <constraint firstAttribute="width" constant="309" id="LBj-ks-Oip"/>
+                            <constraint firstAttribute="height" constant="20.5" id="RMZ-Ua-G4w"/>
                         </constraints>
-                    </stackView>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="venue" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LAb-ut-pWi">
+                        <rect key="frame" x="124" y="60" width="317" height="20.5"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20.5" id="SSZ-pQ-U4O"/>
+                            <constraint firstAttribute="width" constant="317" id="hvw-NC-g6I"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hma-kN-VDM">
+                        <rect key="frame" x="124" y="5" width="317" height="54"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="54" id="gDA-Ks-hCp"/>
+                            <constraint firstAttribute="width" constant="317" id="qhm-zD-u2h"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jF3-yK-dRG">
+                        <rect key="frame" x="9" y="11" width="107" height="101"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="107" id="JWu-1e-aro"/>
+                            <constraint firstAttribute="height" constant="101" id="h8I-8M-V3J"/>
+                        </constraints>
+                    </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mdf-f7-mVe" customClass="HeartButton" customModule="CodingChallengeExpedia" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="ECK-4f-1E6"/>
+                            <constraint firstAttribute="width" constant="30" id="RGn-ae-mM5"/>
+                        </constraints>
+                        <color key="tintColor" red="1" green="0.082858907910000001" blue="0.28487266900000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <state key="normal">
+                            <color key="titleColor" red="1" green="0.082858907910000001" blue="0.28487266900000002" alpha="1" colorSpace="calibratedRGB"/>
+                        </state>
+                    </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="esw-YV-g25" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-8" id="4E9-GH-cYb"/>
-                    <constraint firstItem="esw-YV-g25" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="19" id="OeJ-uv-ic6"/>
+                    <constraint firstItem="Mdf-f7-mVe" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="6Pn-O5-kDZ"/>
+                    <constraint firstItem="zLl-wr-xho" firstAttribute="leading" secondItem="jF3-yK-dRG" secondAttribute="trailing" constant="8" id="7E9-8n-5be"/>
+                    <constraint firstAttribute="bottom" secondItem="zLl-wr-xho" secondAttribute="bottom" constant="11" id="BbN-El-Q8i"/>
+                    <constraint firstAttribute="trailing" secondItem="Hma-kN-VDM" secondAttribute="trailing" constant="9" id="IUa-G6-cmq"/>
+                    <constraint firstItem="LAb-ut-pWi" firstAttribute="top" secondItem="Hma-kN-VDM" secondAttribute="bottom" constant="1" id="N0a-vq-H7I"/>
+                    <constraint firstItem="LAb-ut-pWi" firstAttribute="top" secondItem="Hma-kN-VDM" secondAttribute="bottom" constant="1" id="OsD-Nw-N5c"/>
+                    <constraint firstItem="Mdf-f7-mVe" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="SgW-xj-cSx"/>
+                    <constraint firstItem="zLl-wr-xho" firstAttribute="top" secondItem="LAb-ut-pWi" secondAttribute="bottom" constant="10.5" id="U8N-ih-0yz"/>
+                    <constraint firstItem="zLl-wr-xho" firstAttribute="leading" secondItem="jF3-yK-dRG" secondAttribute="trailing" constant="8" id="cFC-Ng-sMo"/>
+                    <constraint firstAttribute="trailing" secondItem="LAb-ut-pWi" secondAttribute="trailing" constant="9" id="h4T-3W-Nov"/>
+                    <constraint firstItem="Hma-kN-VDM" firstAttribute="leading" secondItem="jF3-yK-dRG" secondAttribute="trailing" constant="8" id="n7E-9e-e6S"/>
+                    <constraint firstItem="LAb-ut-pWi" firstAttribute="leading" secondItem="jF3-yK-dRG" secondAttribute="trailing" constant="8" id="r75-6b-K9n"/>
+                    <constraint firstAttribute="bottom" secondItem="jF3-yK-dRG" secondAttribute="bottom" constant="10.5" id="rfw-oY-Ae8"/>
+                    <constraint firstItem="jF3-yK-dRG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11" id="sKw-1A-BKO"/>
+                    <constraint firstAttribute="trailing" secondItem="zLl-wr-xho" secondAttribute="trailing" constant="17" id="tep-83-6ud"/>
+                    <constraint firstItem="jF3-yK-dRG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="9" id="wtC-mp-kMy"/>
+                    <constraint firstItem="Hma-kN-VDM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="zIF-IR-iJZ"/>
+                    <constraint firstItem="zLl-wr-xho" firstAttribute="top" secondItem="LAb-ut-pWi" secondAttribute="bottom" constant="10.5" id="zqt-rC-XEj"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="date" destination="zLl-wr-xho" id="Xph-yJ-wye"/>
+                <outlet property="favoriteIcon" destination="Mdf-f7-mVe" id="A8K-od-7rr"/>
                 <outlet property="title" destination="Hma-kN-VDM" id="stH-jy-AOt"/>
                 <outlet property="venue" destination="LAb-ut-pWi" id="35I-Ce-cLE"/>
             </connections>
-            <point key="canvasLocation" x="-230" y="127.5"/>
+            <point key="canvasLocation" x="-230" y="170.5"/>
         </tableViewCell>
     </objects>
 </document>
